--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/common": "^3.1",
+        "laravel-lang/lang": "^12.22",
         "laravel/breeze": "^1.21",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.22",
